#                    "Merged from", "Cleanup", "Issue", "Adjustment"           #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------
DG-2011-04-13-0: Bugfix:     when trying to install (19) and a expect binary
                             is not available for a host an error message
                             is generated
                 Review:     SH

DG-2011-04-08-0: Cleanup:    added bash as allowed login_shell like in default
                             UGE installation
                 Review:     EB

HP-2011-04-07-0: Bugfix:     Fixed bug in qmod_auto_reschedule test that was
                             introduced with HP-2011-04-05-0
                 Belongs to: HP-2011-04-05-0

HP-2011-04-06-1: Enhancem:   Added check if user home dirs are shared
                 Issue:      TS-382
                 Review:     SH

EB-2011-04-06-0: Bugfix:     TS sometimes tries to start commands on hosts
                             not part of the cluster configuration
                 Issue:      TS-380

HP-2011-04-06-0: Bugfix:     fixed several tests failing because of config
                             errors - now they are unsupported, not failing
                 Issue:      TS-374, TS-375, TS-376
                 Review:     JG

DG-2011-04-06-0: Cleanup:    fixed failing qmaster reporting test
                 Review:     JG

HP-2011-04-05-0: Bugfix:     wait_for_end_of_transfer() function is broken
                 Issue:      TS-379
                 Review:     SH

JG-2011-04-04-0: Enhancem.:  testsuite build shall also create an arco package
                 Issue:      TS-373
                 Review:     DG

DG-2011-04-04-3: Bugfix:     fixed bug in advance reservation test