@@ -6,6 +6,12 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 -----------------+-----------+--------------------------------------------------
+
+JG-2011-04-14-0: Enhancem.:  new test for issue GE-3306: jobs get scheduled but
+                             are not started after global host changed
+                             test still disabled until code is checked in
+                 Review:     SH
+
 DG-2011-04-13-0: Bugfix:     when trying to install (19) and a expect binary
                              is not available for a host an error message
                              is generated
